<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mypc.aaiv_voicecontrol.AddPersonActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@color/accent"
        android:id="@+id/iv_person_preview"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_name"
        android:layout_below="@+id/iv_person_preview">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/person_name"
            android:id="@+id/txt_person_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_layout_des"
        android:layout_below="@+id/input_layout_name">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/person_des"
            android:id="@+id/txt_person_des"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_person_group"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/input_layout_des"
        android:prompt="@string/spinner_title">

    </Spinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_create"
        android:text="@string/bt_create_person"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
